Hardening audit: Shade Bukkit jar, resolve Folia region safety, fix configure-on-demand Forge builds, prevent old chicken re-rolls, and add MockBukkit tests